force-app/main/default/objects/Dev_Contact__c/Dev_Contact__c.object-meta.xml
<CustomObject>
    <description>Developer Marketing : Contacts</description>
    <label>Dev Contact</label>
    <nameField>
        <displayFormat>DC-{0000000}</displayFormat>
        <label>Dev Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dev Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>