force-app/main/default/objects/Dev_Contact__c/fields/Anonymization_Reason__c.field-meta.xml
<CustomField>
    <fullName>Anonymization_Reason__c</fullName>
    <description>Stores the reason a record was decided to be anonymized.</description>
    <label>Anonymization Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Privacy Data Delete Request</fullName>
            </value>
            <value>
                <fullName>NVIDIA Data Retention Privacy Policy</fullName>
            </value>
            <value>
                <fullName>Deleted for Business Reasons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>