force-app/main/default/objects/Dev_Contact__c/fields/Anonymized__c.field-meta.xml
<CustomField>
    <fullName>Anonymized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a field is anonymized or not. This is part of the solution to stay compliant with General Data Protection Regulation (GDPR) and NVIDIA Privacy Policy of not retaining user information of those who we have not engaged with beyond the last 5 years.</description>
    <label>Anonymized</label>
    <type>Checkbox</type>
</CustomField>