force-app/main/default/objects/Dev_Contact__c/fields/Dev_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Dev_Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dev Account Name</label>
    <referenceTo>Dev_Account__c</referenceTo>
    <relationshipLabel>Dev Contacts</relationshipLabel>
    <relationshipName>Dev_Contacts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>