force-app/main/default/objects/Dev_Contact__c/fields/Dev_Account_Name_Org__c.field-meta.xml
<CustomField>
    <fullName>Dev_Account_Name_Org__c</fullName>
    <formula>Dev_Account_Name__r.Dev_Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dev Account Name (Org)</label>
    <type>Text</type>
</CustomField>