force-app/main/default/objects/Dev_Contact__c/fields/Development_Areas__c.field-meta.xml
<CustomField>
    <fullName>Development_Areas__c</fullName>
    <label>Development Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autonomous Machines</fullName>
            </value>
            <value>
                <fullName>Design &amp; Visualization</fullName>
            </value>
            <value>
                <fullName>Game Development</fullName>
            </value>
            <value>
                <fullName>HPC</fullName>
            </value>
            <value>
                <fullName>AI / Deep Learning</fullName>
            </value>
            <value>
                <fullName>Autonomous Vehicles</fullName>
            </value>
            <value>
                <fullName>IoT / Smart Cities</fullName>
            </value>
            <value>
                <fullName>AR / VR</fullName>
            </value>
            <value>
                <fullName>Data Science</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>