force-app/main/default/objects/Dev_Contact__c/fields/Email2__c.field-meta.xml
<CustomField>
    <fullName>Email2__c</fullName>
    <caseSensitive>true</caseSensitive>
    <complianceGroup>PII</complianceGroup>
    <description>Stores the secondary e-mail as provided by a given developer.</description>
    <label>Email2</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>