force-app/main/default/objects/Dev_Contact__c/fields/Email3__c.field-meta.xml
<CustomField>
    <fullName>Email3__c</fullName>
    <caseSensitive>true</caseSensitive>
    <complianceGroup>PII</complianceGroup>
    <description>Stores the tertiary e-mail as provided by the developer.</description>
    <label>Email3</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>