force-app/main/default/objects/Dev_Contact__c/fields/Field_s_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Field_s_of_Interest__c</fullName>
    <label>Field(s) of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Science: Astronomy &amp; Astrophysics</fullName>
            </value>
            <value>
                <fullName>Science: Bioinformatics &amp; Genomics</fullName>
            </value>
            <value>
                <fullName>Science: Climate/Weather/Ocean Modeling</fullName>
            </value>
            <value>
                <fullName>Science: Quantum Chemistry</fullName>
            </value>
            <value>
                <fullName>Science: Molecular Dynamics</fullName>
            </value>
            <value>
                <fullName>Science: Computational Chemistry</fullName>
            </value>
            <value>
                <fullName>Science: Geoscience</fullName>
            </value>
            <value>
                <fullName>Science: Material Science</fullName>
            </value>
            <value>
                <fullName>Science: Neuroscience</fullName>
            </value>
            <value>
                <fullName>Science: Physics</fullName>
            </value>
            <value>
                <fullName>Tech: Augmented Reality</fullName>
            </value>
            <value>
                <fullName>Tech: Big Data &amp; Data Mining</fullName>
            </value>
            <value>
                <fullName>Tech: Business Intelligence &amp; Analytics</fullName>
            </value>
            <value>
                <fullName>Tech: Computer Graphics &amp; Vizualization</fullName>
            </value>
            <value>
                <fullName>Tech: Computer Vision &amp; Machine Vision</fullName>
            </value>
            <value>
                <fullName>Tech: Databases</fullName>
            </value>
            <value>
                <fullName>Tech: DCC &amp; Special Effects</fullName>
            </value>
            <value>
                <fullName>Tech: Machine Learning &amp; AI</fullName>
            </value>
            <value>
                <fullName>Tech: Medical Imaging</fullName>
            </value>
            <value>
                <fullName>Tech: Development Tools &amp; Libraries</fullName>
            </value>
            <value>
                <fullName>Tech: Programming Languages &amp; Compilers</fullName>
            </value>
            <value>
                <fullName>Engr: Computational Structural Mechanics</fullName>
            </value>
            <value>
                <fullName>Engr: Computer Aided Design (CAD)</fullName>
            </value>
            <value>
                <fullName>Engr: Computational Fluid Dynamics (CFD)</fullName>
            </value>
            <value>
                <fullName>Engr: Electronic Design Automation (EDA)</fullName>
            </value>
            <value>
                <fullName>Engr: Energy Exploration &amp; Generation</fullName>
            </value>
            <value>
                <fullName>Math: Algorithms &amp; Numerical Techniques</fullName>
            </value>
            <value>
                <fullName>Math: Computational Photography</fullName>
            </value>
            <value>
                <fullName>Math: Economics</fullName>
            </value>
            <value>
                <fullName>Math: Image Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>