force-app/main/default/objects/Dev_Contact__c/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>