force-app/main/default/objects/Dev_Contact__c/fields/Industry_Segment_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segment_Vertical__c</fullName>
    <label>Industry Segment/Vertical</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Architecture / Engineering / Construction</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Cloud Services</fullName>
            </value>
            <value>
                <fullName>Consulting Services</fullName>
            </value>
            <value>
                <fullName>Defense</fullName>
            </value>
            <value>
                <fullName>Energy / Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Game Development</fullName>
            </value>
            <value>
                <fullName>Government / National Labs</fullName>
            </value>
            <value>
                <fullName>Hardware / Semiconductor</fullName>
            </value>
            <value>
                <fullName>Healthcare &amp; Life Sciences</fullName>
            </value>
            <value>
                <fullName>Higher Education / Research</fullName>
            </value>
            <value>
                <fullName>Internet / Telecommunications</fullName>
            </value>
            <value>
                <fullName>IT Services</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Media &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Retail / Etail</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>