force-app/main/default/objects/Dev_Contact__c/fields/Invalid_Email__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Email__c</fullName>
    <label>Invalid Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>