force-app/main/default/objects/Dev_Contact__c/fields/Legacy_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Contact_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Legacy Contact ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>