force-app/main/default/objects/Dev_Contact__c/fields/Mailing_Region__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Region__c</fullName>
    <label>Mailing Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>NALA</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>