force-app/main/default/objects/Dev_Contact__c/fields/Mailing_Territory__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Territory__c</fullName>
    <label>Mailing Territory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ROMANIA_CROATIA_BULGARIA_SERBIA_REST OF BALKANS</fullName>
            </value>
            <value>
                <fullName>DACH</fullName>
            </value>
            <value>
                <fullName>CZECH_HUNGARY_SLOVAKIA</fullName>
            </value>
            <value>
                <fullName>POLAND_BALTICS</fullName>
            </value>
            <value>
                <fullName>CIS</fullName>
            </value>
            <value>
                <fullName>RUSSIA</fullName>
            </value>
            <value>
                <fullName>UKRAINE</fullName>
            </value>
            <value>
                <fullName>MIDDLE EAST</fullName>
            </value>
            <value>
                <fullName>AFRICA</fullName>
            </value>
            <value>
                <fullName>TURKEY</fullName>
            </value>
            <value>
                <fullName>UK_NORDICS</fullName>
            </value>
            <value>
                <fullName>FRANCE_BENELUX</fullName>
            </value>
            <value>
                <fullName>SOUTH ASIA</fullName>
            </value>
            <value>
                <fullName>IBERIA</fullName>
            </value>
            <value>
                <fullName>ITALY_GREECE_ISRAEL</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>