force-app/main/default/objects/Dev_Contact__c/fields/Mailing_Zip_Postal_code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Zip_Postal_code__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>Mailing Zip/Postal code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>