force-app/main/default/objects/Dev_Contact__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>