force-app/main/default/objects/Dev_Contact__c/fields/Organization_Website__c.field-meta.xml
<CustomField>
    <fullName>Organization_Website__c</fullName>
    <description>Captures the user provided value for the organization URL.</description>
    <label>Organization Website</label>
    <type>Url</type>
</CustomField>