force-app/main/default/objects/Dev_Contact__c/fields/Other_field_s_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Other_field_s_of_Interest__c</fullName>
    <label>Other field(s) of Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>