force-app/main/default/objects/Dev_Contact__c/fields/Other_Industry_Segment_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Other_Industry_Segment_Vertical__c</fullName>
    <label>Other Industry Segment/Vertical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>