force-app/main/default/objects/Dev_Contact__c/fields/Other_Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Other_Job_Role__c</fullName>
    <label>Other Job Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>