force-app/main/default/objects/Dev_Contact__c/fields/Other_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Other_State_Province__c</fullName>
    <label>Other State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>