force-app/main/default/objects/Dev_Contact__c/fields/Other_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Other_Zip_Postal_Code__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>Other Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>