force-app/main/default/objects/Dev_Contact__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>