force-app/main/default/objects/Dev_Contact__c/fields/Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>Review_Reason__c</fullName>
    <label>Review Reason</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>