force-app/main/default/objects/Dev_Contact__c/fields/Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Review_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review Required</label>
    <type>Checkbox</type>
</CustomField>