force-app/main/default/objects/Dev_Contact__c/fields/Source_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_User_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field will store the developer user id provided by the API from the source (in this case, DevZone). This is required for MuleSoft comparisons and debugging.</description>
    <externalId>true</externalId>
    <label>Source User ID</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>