force-app/main/default/objects/Dev_Contact__c/fields/Starfleet_ID__c.field-meta.xml
<CustomField>
    <fullName>Starfleet_ID__c</fullName>
    <description>Stores the universal (not DevZone specific) user ID of a developer.</description>
    <label>Starfleet ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>